--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,20 +14,28 @@
         android:theme="@style/Theme.Orgs">
 
         <activity
+            android:name=".ui.activity.ActivityInicial"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity
             android:name=".ui.activity.FormularioProdutoActivity"
             android:exported="true"
             android:launchMode="singleTask">
-
         </activity>
         <activity
             android:name=".ui.activity.ListaProdutosActivity"
             android:exported="true"
             android:theme="@style/Theme.Orgs">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
 
         <activity android:name=".ui.activity.DetalhesProdutoActivity" />
