Adição da activity PerfilUsuarioActivity, sendo, também, integrada ao banco de dados da aplicação para identificar o nome do usuário logado. Também foram adicionadas a chamada a partir do meno na ListaProdutosActivity e o botão de logout.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,12 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.activity.PerfilUsuarioActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Orgs">
+        </activity>
+
         <activity android:name=".ui.activity.DetalhesProdutoActivity" />
 
         <meta-data
